Source/WebCore/html/ColorInputType.cpp
@@ -136,6 +136,7 @@ Color ColorInputType::valueAsColor() const
 
 void ColorInputType::createShadowSubtreeAndUpdateInnerTextElementEditability(ContainerNode::ChildChange::Source source, bool)
 {
+    ASSERT(needsShadowSubtree());
     ASSERT(element());
     ASSERT(element()->shadowRoot());
 
