Source/WebCore/html/HTMLInputElement.cpp
@@ -2,10 +2,10 @@
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 1999 Antti Koivisto (koivisto@kde.org)
  *           (C) 2001 Dirk Mueller (mueller@kde.org)
- * Copyright (C) 2004-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2004-2021 Apple Inc. All rights reserved.
  *           (C) 2006 Alexey Proskuryakov (ap@nypop.com)
  * Copyright (C) 2007 Samuel Weinig (sam@webkit.org)
- * Copyright (C) 2010 Google Inc. All rights reserved.
+ * Copyright (C) 2010-2021 Google Inc. All rights reserved.
  * Copyright (C) 2008 Torch Mobile Inc. All rights reserved. (http://www.torchmobile.com/)
  * Copyright (C) 2012 Samsung Electronics. All rights reserved.
  *
@@ -84,7 +84,7 @@ WTF_MAKE_ISO_ALLOCATED_IMPL(HTMLInputElement);
 using namespace HTMLNames;
 
 #if ENABLE(DATALIST_ELEMENT)
-class ListAttributeTargetObserver : IdTargetObserver {
+class ListAttributeTargetObserver final : public IdTargetObserver {
     WTF_MAKE_FAST_ALLOCATED;
 public:
     ListAttributeTargetObserver(const AtomString& id, HTMLInputElement*);
@@ -144,8 +144,11 @@ Ref<HTMLInputElement> HTMLInputElement::create(const QualifiedName& tagName, Doc
 {
     bool shouldCreateShadowRootLazily = createdByParser;
     Ref<HTMLInputElement> inputElement = adoptRef(*new HTMLInputElement(tagName, document, form, createdByParser));
-    if (!shouldCreateShadowRootLazily)
-        inputElement->ensureUserAgentShadowRoot();
+    if (!shouldCreateShadowRootLazily) {
+        ASSERT(inputElement->m_inputType->needsShadowSubtree());
+        inputElement->createUserAgentShadowRoot();
+        inputElement->createShadowSubtreeAndUpdateInnerTextElementEditability();
+    }
     return inputElement;
 }
 
@@ -156,7 +159,7 @@ HTMLImageLoader& HTMLInputElement::ensureImageLoader()
     return *m_imageLoader;
 }
 
-void HTMLInputElement::didAddUserAgentShadowRoot(ShadowRoot&)
+void HTMLInputElement::createShadowSubtreeAndUpdateInnerTextElementEditability()
 {
     Ref<InputType> protectedInputType(*m_inputType);
     protectedInputType->createShadowSubtreeAndUpdateInnerTextElementEditability(m_parsingInProgress ? ChildChange::Source::Parser : ChildChange::Source::API, isInnerTextElementEditable());
@@ -575,7 +578,10 @@ void HTMLInputElement::updateType()
     m_inputType->detachFromElement();
 
     m_inputType = WTFMove(newType);
-    m_inputType->createShadowSubtreeAndUpdateInnerTextElementEditability(m_parsingInProgress ? ChildChange::Source::Parser : ChildChange::Source::API, isInnerTextElementEditable());
+    if (m_inputType->needsShadowSubtree()) {
+        ensureUserAgentShadowRoot();
+        createShadowSubtreeAndUpdateInnerTextElementEditability();
+    }
 
     updateWillValidateAndValidity();
 
@@ -728,14 +734,19 @@ inline void HTMLInputElement::initializeInputType()
     const AtomString& type = attributeWithoutSynchronization(typeAttr);
     if (type.isNull()) {
         m_inputType = InputType::createText(*this);
-        ensureUserAgentShadowRoot();
+        ASSERT(m_inputType->needsShadowSubtree());
+        createUserAgentShadowRoot();
+        createShadowSubtreeAndUpdateInnerTextElementEditability();
         updateWillValidateAndValidity();
         return;
     }
 
     m_hasType = true;
     m_inputType = InputType::create(*this, type);
-    ensureUserAgentShadowRoot();
+    if (m_inputType->needsShadowSubtree()) {
+        createUserAgentShadowRoot();
+        createShadowSubtreeAndUpdateInnerTextElementEditability();
+    }
     updateWillValidateAndValidity();
     registerForSuspensionCallbackIfNeeded();
     runPostTypeUpdateTasks();
